# eventcatalog-api

./: .env  Dockerfile  README.md  build_and_run.sh  pyproject.toml
docs/: api_architecture_design.drawio
eventcatalog_api/: start_api.sh
eventcatalog_api/app/db/: expose_neo4j_service.sh  neo4j.py
eventcatalog_api/app/graphql/: schema.py
eventcatalog_api/app/graphql/fetchers/: mock_data_fetcher.py
eventcatalog_api/app/graphql/types/: badge.py  event.py  main.py  owner.py  repository.py  schema.py  service.py  tag.py  user.py
eventcatalog_api/app/models/: badge.py  domain.py  event.py  owner.py  repository.py  schema.py  service.py  tag.py  user.py
eventcatalog_api/app/utils/: color.py
eventcatalog_api/server/: config.py  dependencies.py  main.py  middleware.py
eventcatalog_api/server/routes/: additional_routes.py
k8s/: start_neo.sh
